// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`repeat-node-update-compiler on compile multipl paths 1`] = `
"_updaters.push({
  update: st => {
    let prevCount = items.length;
    items = st.bars.push(...st.foos);
    _nodes.forEach(node => {
      node.updaters.forEach(u => u.update(st));
    });
    for (let i = items.length; i < prevCount; i++) {
      parent.removeChild(_nodes.pop().node);
    }
    for (let i = prevCount; i < items.length; i++) {
      _createChildren(i);
    }
  }
});"
`;

exports[`repeat-node-update-compiler on compile single path 1`] = `
"_updaters.push({
  update: st => {
    let prevCount = items.length;
    items = st.bars;
    _nodes.forEach(node => {
      node.updaters.forEach(u => u.update(st));
    });
    for (let i = items.length; i < prevCount; i++) {
      parent.removeChild(_nodes.pop().node);
    }
    for (let i = prevCount; i < items.length; i++) {
      _createChildren(i);
    }
  }
});"
`;
